# stdio-acp-bridge

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.agents/: AGENTS.md
agy-acp/: Cargo.toml  README.md
agy-acp/src/: adapter.rs  db.rs  lib.rs  main.rs  protobuf.rs  streaming.rs  types.rs
agy-acp/tests/: extra_tests.rs  integration.rs  test_debug_log.rs
openai-api-acp/: Cargo.toml  README.md
openai-api-acp/src/: adapter.rs  lib.rs  main.rs  types.rs
openai-api-acp/tests/: integration.rs  test_builder.rs  test_debug_log.rs  test_execute.py  test_proxy.py  test_release.py
src/: main.rs
