[package]
name = "stdio-acp-bridge"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "agy-acp",
    "openai-api-acp"
]

[dependencies]
agy-acp = { path = "agy-acp" }
openai-api-acp = { path = "openai-api-acp" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.14", features = ["yaml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
